--- a/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
+++ b/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Critter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hashtable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Critter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Hashtable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
