--- a/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj
+++ b/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj
@@ -168,12 +168,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Critter.cpp" />
-    <ClCompile Include="Hashtable.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Critter.h" />
-    <ClInclude Include="Hashtable.h" />
+    <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
