--- a/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
+++ b/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Critter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Hashtable.cpp">
+    <ClCompile Include="ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="Critter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Hashtable.h">
+    <ClInclude Include="ResourceManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
