Started object pool. finished uml for design document

--- a/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
+++ b/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectPool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Critter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
