--- a/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj
+++ b/Assessment/AIEYear1Samples-master/CDDS_Optimise/CDDS_Optimise.vcxproj
@@ -168,11 +168,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Critter.cpp" />
+    <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Critter.h" />
+    <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
