Finished Debugging. tried to do object pool and resource. Check critters isloaded bool

--- a/Assessment/AIEYear1Samples-master/CDDS_BinaryTree/CDDS_BinaryTree.vcxproj.filters
+++ b/Assessment/AIEYear1Samples-master/CDDS_BinaryTree/CDDS_BinaryTree.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="BinaryTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TreeNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Code design\BinaryTree\BinaryTree\BinaryTreeTests\CDDS_BinaryTree\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
