--- a/Code design/BinaryTree/BinaryTree/BinaryTreeTests/BinaryTreeTests/BinaryTreeTests.vcxproj.filters
+++ b/Code design/BinaryTree/BinaryTree/BinaryTreeTests/BinaryTreeTests/BinaryTreeTests.vcxproj.filters
@@ -18,13 +18,22 @@
     <ClCompile Include="BinaryTreeTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="..\CDDS_BinaryTree\BinaryTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CDDS_BinaryTree\TreeNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="..\CDDS_BinaryTree\BinaryTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\CDDS_BinaryTree\TreeNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
